[package]
name = "async-tungstenite"
description = "async-std binding for Tungstenite, the Lightweight stream-based WebSocket implementation"
categories = ["web-programming::websocket", "network-programming", "asynchronous", "concurrency"]
keywords = ["websocket", "io", "web"]
authors = ["Sebastian Dröge <sebastian@centricular.com>", "Daniel Abramov <dabramov@snapview.de>", "Alexey Galakhov <agalakhov@snapview.de>"]
license = "MIT"
homepage = "https://github.com/sdroege/async-tungstenite"
documentation = "https://docs.rs/async-tungstenite/0.10.0"
repository = "https://github.com/sdroege/async-tungstenite"
version = "0.10.0-alpha.1"
edition = "2018"

[features]
default = ["connect", "tls"]
connect = ["stream"]
async_std_runtime = ["connect", "tls", "async-std"]
tls = ["async-tls", "stream", "tungstenite/tls"]
stream = ["bytes"]

[dependencies]
log = "0.4"
futures = { version = "0.3", features = ["async-await"] }
pin-project = "0.4.0-alpha.9"

[dependencies.tungstenite]
#version = "0.9.1"
git = "https://github.com/snapview/tungstenite-rs.git"
branch = "master"
default-features = false

[dependencies.bytes]
optional = true
version = "0.4.8"

[dependencies.async-std]
optional = true
version = "0.99"

[dependencies.async-tls]
optional = true
version = "0.5.0"
git = "https://github.com/async-rs/async-tls.git"

[dev-dependencies]
url = "2.0.0"
env_logger = "0.6.1"
async-std = "0.99"
